...
"a11y_read_receipts_tap_to_show_all_ios" = "Tap to show all";
"a11y_remove_reaction" = "Remove reaction: %1$@";
"a11y_remove_reaction_with" = "Remove reaction with %1$@";
"a11y_send_files" = "Send files";
"a11y_sender_location" = "Sender location";
"a11y_session_verification_time_limited_action_required" = "Time limited action required, you have one minute to verify";
"a11y_settings_with_required_action" = "Settings, action required";
"a11y_show_password" = "Show password";
"a11y_start_call" = "Start a call";
"a11y_start_video_call" = "Start a video call";
"a11y_start_voice_call" = "Start a voice call";
"a11y_status" = "Status";
"a11y_tombstoned_room" = "Tombstoned room";
...
"a11y.thread_in_room" = "Thread in %1$@";
"a11y.threads_in_room" = "Threads in %1$@";
"a11y.user_avatar" = "User avatar";
"a11y.your_avatar" = "Your avatar";
"action_accept" = "Accept";
"action_add_caption" = "Add caption";
"action_add_existing_rooms" = "Add existing rooms";
"action_add_to_timeline" = "Add to timeline";
"action_back" = "Back";
"action_call" = "Call";
"action_cancel" = "Cancel";
"action_cancel_for_now" = "Cancel for now";
"action_choose_file" = "Choose file";
...
"action_clear" = "Clear";
"action_clear_all" = "Clear all";
"action_close" = "Close";
"action_complete_verification" = "Complete verification";
"action_confirm" = "Confirm";
"action_confirm_password" = "Confirm password";
"action_continue" = "Continue";
"action_copy" = "Copy";
"action_copy_caption" = "Copy caption";
"action_copy_link" = "Copy link";
"action_copy_link_to_message" = "Copy link to message";
"action_copy_text" = "Copy text";
"action_copy_to_clipboard" = "Copy to clipboard";
"action_create" = "Create";
"action_create_room" = "Create room";
"action_create_space" = "Create space";
"action_deactivate" = "Deactivate";
"action_deactivate_account" = "Deactivate account";
"action_decline" = "Decline";
"action_decline_and_block" = "Decline and block";
"action_delete" = "Delete";
...
"action_mark_as_read" = "Mark as read";
"action_message" = "Message";
"action_minimize" = "Minimize";
"action_next" = "Next";
"action_no" = "No";
"action_not_now" = "Not now";
"action_ok" = "OK";
"action_open_context_menu" = "Open context menu";
"action_open_settings" = "Settings";
"action_open_with" = "Open with";
"action_pin" = "Pin";
"action_quick_reply" = "Quick reply";
"action_quote" = "Quote";
...
"common_bubbles" = "Bubbles";
"common_call_declined" = "Call declined";
"common_call_in_progress" = "Call in progress";
"common_call_started" = "Call started";
"common_call_you_declined" = "You declined a call";
"common_chat_backup" = "Chat backup";
"common_chats" = "Chats";
"common_code_block" = "Code block";
"common_copied_to_clipboard" = "Copied to clipboard";
"common_copyright" = "Copyright";
"common_creating_room" = "Creating room…";
"common_creating_space" = "Creating space…";
"common_current_user_canceled_knock" = "Request canceled";
...
"screen_dm_details_unblock_alert_action" = "Unblock";
"screen_dm_details_unblock_alert_description" = "You'll be able to see all messages from them again.";
"screen_dm_details_unblock_user" = "Unblock user";
"screen_edit_poll_delete_confirmation" = "Are you sure you want to delete this poll?";
"screen_edit_poll_delete_confirmation_title" = "Delete Poll";
"screen_edit_poll_title" = "Edit poll";
"screen_edit_profile_display_name" = "Display name";
"screen_edit_profile_display_name_placeholder" = "Your display name";
"screen_edit_profile_error" = "An unknown error was encountered and the information couldn't be changed.";
"screen_edit_profile_error_title" = "Unable to update profile";
"screen_edit_profile_title" = "Edit profile";
"screen_edit_profile_updating_details" = "Updating profile…";
"screen_edit_room_address_room_address_section_footer" = "You’ll need an address in order to make it visible in the public directory.";
...
"screen_encryption_reset_bullet_1" = "Your account details, contacts, preferences, and chat list will be kept";
"screen_encryption_reset_bullet_2" = "You will lose any message history that’s stored only on the server";
"screen_encryption_reset_bullet_3" = "Other users will see that your digital identity has been reset";
"screen_encryption_reset_footer" = "Only reset your digital identity if you don't have access to another verified device and you don't have your recovery key.";
"screen_encryption_reset_title" = "Can't confirm? You’ll need to reset your digital identity.";
"screen_home_tab_chats" = "Chats";
"screen_home_tab_spaces" = "Spaces";
"screen_identity_confirmation_cannot_confirm" = "Can't confirm?";
"screen_identity_confirmation_create_new_recovery_key" = "Create a new recovery key";
"screen_identity_confirmation_subtitle" = "Choose how to verify to set up secure messaging.";
"screen_identity_confirmation_title" = "Confirm your digital identity";
"screen_identity_confirmation_use_another_device" = "Use another device";
"screen_identity_confirmation_use_recovery_key" = "Use recovery key";
...
"screen_space_empty_state_title" = "Add your first room";
"screen_space_list_description" = "Spaces you have created or joined.";
"screen_space_list_details" = "%1$@ • %2$@";
"screen_space_list_empty_state_title" = "Create spaces to organize rooms";
"screen_space_list_parent_space" = "%1$@ space";
"screen_space_list_title" = "Spaces";
"screen_space_menu_action_members" = "View members";
"screen_space_remove_rooms_confirmation_content" = "Removing a room will not affect the room access. To change the access go to Room info > Security & privacy.";
"screen_space_remove_rooms_confirmation_title_ios" = "Remove rooms from %1$@?";
"screen_space_settings_leave_space" = "Leave space";
"screen_space_settings_roles_and_permissions" = "Roles & permissions";
"screen_space_settings_security_and_privacy" = "Security & privacy";
"screen_start_chat_error_starting_chat" = "An error occurred when trying to start a chat";
...
